[package]
name = "snmptrap-forwarder"
version = "1.0.0"
authors = ["Lương Quang Mạnh <luongquangmanh85@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
regex = { version = "1.3.4" }
reqwest = { version = "0.10.3", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "0.2.13", features = ["full"] }

[[bin]]
name = "snmptrap-forwarder"
path = "src/main.rs"
