[package]
name = "snmptrap-forwarder"
version = "1.0.2"
authors = ["Lương Quang Mạnh <luongquangmanh85@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
regex = { version = "1.3.7" }
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
tokio = { version = "0.2.18", features = ["full"] }

[[bin]]
name = "snmptrap-forwarder"
path = "src/main.rs"
